add abstract to html

--- a/default.html
+++ b/default.html
@@ -73,6 +73,10 @@ $endif$
 </header>
 $endif$
 
+$if(abstract)$
+<p class="small"><strong>Abstract: </strong><em>$abstract$</em></p>
+$endif$
+
 $body$
 </div>
 
